fix(website): reduce spacing between header and page title

--- a/website/public/main.css
+++ b/website/public/main.css
@@ -228,6 +228,7 @@ hr {
 
 main > h2:first-child {
   border-top: 0;
+  margin-top: 0;
   padding-top: 0;
 }
 
